<resources>
    <string name="app_name">PillDozer</string>

    <string name="medicine1_name">Burana</string>
    <string name="medicine2_name">Panadol</string>
    <string name="medicine3_name">Multi-vitamiini</string>
    <string name="medicine4_name">Burana</string>
    <string name="medicine5_name">C-vitamiini</string>
    <string name="medicine6_name">D-vitamiini</string>
    <string name="medicine7_name">Burana</string>
    <string name="medicine8_name">Burana</string>
    <string name="medicine9_name">Panadol</string>
    <string name="medicine10_name">Panadol</string>
    <string name="medicine11_name">Burana</string>


    <string name="medicine1_quantity">1g</string>
    <string name="medicine2_quantity">400mg</string>
    <string name="medicine3_quantity">1 pill</string>
    <string name="medicine4_quantity">2g</string>
    <string name="medicine5_quantity">3 pill</string>
    <string name="medicine6_quantity">10mg</string>
    <string name="medicine7_quantity">400mg</string>
    <string name="medicine8_quantity">600mg</string>
    <string name="medicine9_quantity">500mg</string>
    <string name="medicine10_quantity">1g</string>
    <string name="medicine11_quantity">4g</string>


    <string name="medicine1_description">Lorem Ipsum </string>
    <string name="medicine2_description">Lorem Ipsum </string>
    <string name="medicine3_description">Lorem Ipsum </string>
    <string name="medicine4_description">Lorem Ipsum </string>
    <string name="medicine5_description">Lorem Ipsum </string>
    <string name="medicine6_description">Lorem Ipsum </string>
    <string name="medicine7_description">Lorem Ipsum </string>
    <string name="medicine8_description">Lorem Ipsum </string>
    <string name="medicine9_description">Lorem Ipsum </string>
    <string name="medicine10_description">Lorem Ipsum </string>
    <string name="medicine11_description">Lorem Ipsum </string>

    <string name="log_in_fin">Kirjaudu Sisään</string>
    <string name="enter_name_fin">Syötä nimi</string>
    <string name="medicines_fin">Lääkkeet</string>
    <string name="medicine_name_fin">Lääkkeen nimi</string>
    <string name="medicine_quantity_fin">Kerta-annoksen määrä</string>
    <string name="medicine_description_fin">Lisätietoja</string>
    <string name="delete_medicine_fin">Poista lääke</string>
    <string name="new_medicine_fin">Uusi lääke</string>
    <string name="reminder_time_fin">Muistutus aika</string>
    <string name="recurring_reminder_fin">Toistuva muistutus</string>
    <string name="monday_fin">Ma</string>
    <string name="tuesday_fin">Ti</string>
    <string name="wednesday_fin">Ke</string>
    <string name="thursday_fin">To</string>
    <string name="friday_fin">Pe</string>
    <string name="saturday_fin">La</string>
    <string name="sunday_fin">Su</string>
    <string name="add_medicine_fin">Lisää lääke</string>
    <string name="settings_fin">Asetukset</string>
    <string name="about_us_fin">Tietoa meistä</string>
    <string name="medical_history_fin">Lääkehistoria</string>
    <string name="feedback_fin">Anna palautetta</string>


</resources>