<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_medHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_medicine_fin""
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/fragment_createalarm_timePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_medHeader">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/reminder_time_fin"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TimePicker
                android:id="@+id/fragment_createalarm_timePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:timePickerMode="spinner" />
        </LinearLayout>

        <EditText
            android:id="@+id/giveMedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicine_name_fin"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_timePickerLayout" />

        <EditText
            android:id="@+id/giveMedQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicine_quantity_fin"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/giveMedName" />

        <EditText
            android:id="@+id/giveMedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicine_description_fin"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/giveMedQuantity" />

        <CheckBox
            android:id="@+id/fragment_createalarm_recurring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/recurring_reminder_fin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/giveMedDescription" />

        <LinearLayout
            android:id="@+id/fragment_createalarm_recurring_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_recurring">

            <CheckBox
                android:id="@+id/fragment_createalarm_checkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday_fin" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday_fin" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday_fin" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday_fin" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday_fin" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday_fin" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday_fin" />

        </LinearLayout>

        <Button
            android:id="@+id/buSaveNewMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_medicine_fin"
            android:backgroundTint="#188100"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="133dp" />

        <TextView
            android:id="@+id/medAddError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:textColor="#F60B0B"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buSaveNewMed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_recurring_options" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>